# mail-dev

./: .env.example  .gitignore  LICENSE  README.md  config-overrides.js  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish.yml
docs/: _config.yml  index.md
public/: index.html
src/: App.js  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: forward.rs  main.rs  smtp.rs  window.rs
src/components/: MailContent.js  Sidebar.js
src/screens/: Mailbox.js  Settings.js
src/store/: mailboxReducer.js  settingReducer.js  store.js
src/styles/: main.css  tailwind.css
